fixed resizing of notifications menu fixed collapsing of edit registrations + resizing of menu changes css for edit offers

--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -38,6 +38,9 @@
     a:hover{
       background-color: $dark_grey;
     }
+    a.active:hover{
+      background-color:$color_qwerteach_green;
+    }
     .title{
       border: none;
       background: $medium_grey;
